test/spec_vectors/try_table/fail/module_11.wat
(module (func (result exnref) (try_table (catch_all 0)) (unreachable)))